# openff-stats

./: .gitignore  CLAUDE.md  README.md  environment.yaml  pixi.toml  pyproject.toml
.github/workflows/: gh-ci.yaml
candidates/: packages.csv  publications.csv  zenodo.csv
data/: README.md  ambertools-downloads.csv  chemrxiv-metrics.csv  citations.csv  dep_tree.csv  downloads.csv  downloads_yearly.csv  github_repo_descriptions.csv  github_repo_stars.csv  github_repos.csv  google-scholar.csv  openff-forcefields-downloads.csv  openff-software-downloads.csv  zenodo_citations.csv
data/github_repos/: descent.csv  openff-qcsubmit.csv  openff-toolkit.csv  yammbs.csv
data/openff-forcefields-stats/: monthly_stats_combined.csv  yearly_stats.csv
inputs/: github_owner_blacklist.csv  github_packages.csv  orcids.csv  packages.csv  publications.csv  zenodo.csv
inputs/github_repos/: openff-toolkit.csv
inputs/publications/: force-field.csv  general.csv
inputs/zenodo/: general.csv  openff-toolkit.csv  qcsubmit.csv  yammbs.csv
old/: czi-stats-openfe-Copy1.ipynb  czi-stats-openfe-Copy2.ipynb  czi-stats-openfe.ipynb  czi-stats.ipynb
old/data/: chemrxiv-metrics.csv  citations.csv  google-scholar.csv  openff-software-downloads.csv
old/inputs/: chemrxiv.csv  crossref.csv  scholar.csv
scripts/: get-chemrxiv-stats.py  get-crossref-citation-stats.py  get-openff-software-stats.py  get-scholar-citation-stats.py  run-get-crossref-citation-stats.sh  run-get-download-stats.sh  run-get-openff-software-stats.sh  run-get-scholar-citation-stats.sh
src/openff_stats/: cli.py  curated.py  (+5 more)
(+8 files in other folders)
