[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openff-stats"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pandas",
    "requests",
    "tqdm",
    "condastats",
    "seaborn",
    "matplotlib",
    "selenium",
]

[project.scripts]
openff-stats = "openff_stats.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
